# ai-client-configure

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
ai_client_configure/: __init__.py  __main__.py  cli.py  config.py
docs/: 01_research.md  02_architecture.md  03_design.md  04_tasks.md  05_task_template.md  06_testing_review.md  07_documentation.md  08_project_management.md  PROJECT_PLAN.md
docs/architecture/: architecture_and_stack.md
docs/design/: detailed_design.md
docs/research/: stage1_technical_research.md
docs/tasks/: task_sheet.md
scripts/: dev_setup.sh
sync_service/: __init__.py  __main__.py  app.py  config.py  main.py  secrets.py
sync_service/routes/: health.py
tests/: test_cli.py  test_config.py
tests/sync_service/: test_app.py  test_secrets.py
