[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-client-configure"
version = "0.1.0"
description = "Command-line utility for managing AI client configuration files"
authors = [
  { name = "AI Assistant" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.4,<0.5",
]

[project.scripts]
ai-client-configure = "ai_client_configure.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
