[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-client-configure"
version = "0.1.0"
description = "Command-line utility for managing AI client configuration files"
authors = [
  { name = "AI Assistant" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.110,<0.112",
  "pydantic-settings>=2.2,<2.4",
  "redis>=5.0,<5.1",
  "structlog>=23.1,<24.3",
  "uvicorn[standard]>=0.27,<0.29",
  "watchfiles>=0.21,<0.23",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4,<0.5",
  "pytest>=7.4,<8.3",
  "pytest-asyncio>=0.23,<0.25",
]
backend = [
  "alembic>=1.13,<1.14",
  "databases[sqlite]>=0.8,<0.9",
  "sqlalchemy>=2.0,<2.1",
]

[project.scripts]
ai-client-configure = "ai_client_configure.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
filterwarnings = [
  "ignore:Please use `import python_multipart`:PendingDeprecationWarning",
]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools]
packages = ["ai_client_configure", "sync_service"]
